--- a/UsingFibonacci_dll/UsingFibonacci_dll.vcxproj
+++ b/UsingFibonacci_dll/UsingFibonacci_dll.vcxproj
@@ -72,15 +72,19 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>c:\Users\eugenio.salguero\Documents\Visual Studio 2017\Projects\Fibonacci_dll\Fibonacci_dll\;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>c:\Users\eugenio.salguero\Documents\Visual Studio 2017\Projects\Fibonacci_dll\Fibonacci_dll\;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>c:\Users\eugenio.salguero\Documents\Visual Studio 2017\Projects\Fibonacci_dll\Fibonacci_dll\;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
+    <IncludePath>c:\Users\eugenio.salguero\Documents\Visual Studio 2017\Projects\Fibonacci_dll\Fibonacci_dll\;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
